fixed sidebar issue on mobile

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ ul {
 
 @media only screen and (max-width: 540px), only screen and (max-device-width: 540) {
     .sidebar {
-        visibility: collapse;
+        display: none;
     }
     .header-logo {
         font-size: 16px;
@@ -148,6 +148,6 @@ ul {
         display: block;
     }
     #menu-toggle:checked + .sidebar {
-        visibility: visible;
+        display: flex;
     }
 }
